# Mesozoic-Genesis

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  build_and_run.sh
.Jules/: palette.md
.jules/: sentinel.md
Assets/: AnimationLoader.h  GLTFLoader.h  MorphTargetExtractor.h  TextureLoader.h
Core/AI/: AIController.h  GoapAction.h  GoapPlanner.h  UtilityCurves.h
Core/ECS/: Archetype.h  ComponentArray.h  EntityManager.h  MemoryChunk.h
Core/Math/: Matrix4.h  Vec3.h
Core/Perception/: SmellGrid.h  VisionSystem.h
Core/Simulation/: EntityFactory.h  SimulationManager.h
Core/Threading/: JobSystem.h
Game/: Main.cpp
Gameplay/: Economy.h  ParkManager.h  SaveLoad.h  VisitorAI.h
Genetics/: DNA.h
Graphics/: GPUAnimationInstancing.h  GPUMorphPipeline.h  MorphingSystem.h  PBRSkinShader.h  Renderer.h  ShaderLibrary.h  TerrainGenerator.h  TerrainSystem.cpp  TerrainSystem.h  UberMesh.h  VulkanBackend.h  Window.h
Graphics/Shaders/: shader.frag  shader.vert  ui.frag  ui.vert
Graphics/UI/: UISystem.cpp  UISystem.h
Physics/: CollisionSystem.h  TerrainHeightmap.h
Physics/IK/: CCDSolver.h  PredictiveRaycasting.h  SpinePitching.h
Tests/: CoreTests.cpp
docs/: walkthrough.md
